--- a/blog-detail1.html
+++ b/blog-detail1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Blog</title>
+	<title>Jarvis System</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--===============================================================================================-->
@@ -39,7 +39,6 @@
 		<div class="container-menu-desktop">
 			<!-- Topbar -->
 
-
 			<div class="wrap-menu-desktop how-shadow1">
 				<nav class="limiter-menu-desktop container">
 
@@ -56,7 +55,6 @@
 							</li>
 
 							<li class="active-menu">
-
 								<a href="blog.html">Blog</a>
 							</li>
 
@@ -70,7 +68,7 @@
 						</ul>
 					</div>
 
-
+					<!-- Icon header -->
 				</nav>
 			</div>
 		</div>
@@ -105,7 +103,14 @@
 			<ul class="main-menu-m">
 				<li>
 					<a href="index.html">Home</a>
-
+					<ul class="sub-menu-m">
+						<li>
+							<a href="index.html">Homepage 1</a>
+						</li>
+					</ul>
+					<span class="arrow-main-menu-m">
+						<i class="fa fa-angle-right" aria-hidden="true"></i>
+					</span>
 				</li>
 
 				<li>
@@ -139,272 +144,195 @@
 		</div>
 	</header>
 
-	<!-- Cart -->
-	<div class="wrap-header-cart js-panel-cart">
-		<div class="s-full js-hide-cart"></div>
 
-		<div class="header-cart flex-col-l p-l-65 p-r-25">
-			<div class="header-cart-title flex-w flex-sb-m p-b-8">
-				<span class="mtext-103 cl2">
-					Your Cart
-				</span>
+	<!-- breadcrumb -->
+	<div class="container">
+		<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
+			<a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
+				Home
+				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+			</a>
 
-				<div class="fs-35 lh-10 cl2 p-lr-5 pointer hov-cl1 trans-04 js-hide-cart">
-					<i class="zmdi zmdi-close"></i>
-				</div>
-			</div>
+			<a href="blog.html" class="stext-109 cl8 hov-cl1 trans-04">
+				Blog
+				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+			</a>
 
-			<div class="header-cart-content flex-w js-pscroll">
-				<ul class="header-cart-wrapitem w-full">
-					<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="images/item-cart-01.jpg" alt="IMG">
-						</div>
-
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								White Shirt Pleat
-							</a>
-
-							<span class="header-cart-item-info">
-								1 x $19.00
-							</span>
-						</div>
-					</li>
-
-					<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="images/item-cart-02.jpg" alt="IMG">
-						</div>
-
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								Converse All Star
-							</a>
-
-							<span class="header-cart-item-info">
-								1 x $39.00
-							</span>
-						</div>
-					</li>
-
-					<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="images/item-cart-03.jpg" alt="IMG">
-						</div>
-
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								Nixon Porter Leather
-							</a>
-
-							<span class="header-cart-item-info">
-								1 x $17.00
-							</span>
-						</div>
-					</li>
-				</ul>
-
-				<div class="w-full">
-					<div class="header-cart-total w-full p-tb-40">
-						Total: $75.00
-					</div>
-
-					<div class="header-cart-buttons flex-w w-full">
-						<a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
-							View Cart
-						</a>
-
-						<a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
-							Check Out
-						</a>
-					</div>
-				</div>
-			</div>
+			<span class="stext-109 cl4">
+				Jarvis System
+			</span>
 		</div>
 	</div>
 
 
-	<!-- Title page -->
-	<section class="bg-img1 txt-center p-lr-15 p-tb-92" style="background-image: url('images/bg-02.jpg');">
-
-	</section>
-
-
 	<!-- Content page -->
-	<section class="bg0 p-t-62 p-b-60">
+	<section class="bg0 p-t-52 p-b-20">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-lg-9 p-b-80">
 					<div class="p-r-45 p-r-0-lg">
-						<!-- item blog -->
-						<div class="p-b-63">
-							<a href="blog-detail.html" class="hov-img0 how-pos5-parent">
-								<img src="blogImage/IMG_1277.jpg" alt="IMG-BLOG">
+						<!--  -->
+						<div class="wrap-pic-w how-pos5-parent">
+							<img src="blogImage/IMG_1277.jpg" alt="IMG-BLOG">
 
-								<div class="flex-col-c-m size-123 bg9 how-pos5">
-									<span class="ltext-107 cl2 txt-center">
-										4
-									</span>
+							<div class="flex-col-c-m size-123 bg9 how-pos5">
+								<span class="ltext-107 cl2 txt-center">
+									4
+								</span>
 
-									<span class="stext-109 cl3 txt-center">
-										Oct 2018
-									</span>
-								</div>
-							</a>
-
-							<div class="p-t-32">
-								<h4 class="p-b-15">
-									<a href="blog-detail1.html" class="ltext-108 cl2 hov-cl1 trans-04">
-										Jarvis System
-									</a>
-								</h4>
-
-								<p class="stext-117 cl6">
-									This project was to integrate Arduino and laptop in order to build a Smart Assistant at home...
-								</p>
-
-								<div class="flex-w flex-sb-m p-t-18">
-
-									<a href="blog-detail1.html" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
-										Continue Reading
-
-										<i class="fa fa-long-arrow-right m-l-9"></i>
-									</a>
-								</div>
+								<span class="stext-109 cl3 txt-center">
+									Oct 2018
+								</span>
 							</div>
 						</div>
 
-						<!-- item blog -->
-						<div class="p-b-63">
-							<a href="blog-detail.html" class="hov-img0 how-pos5-parent">
-								<img src="images/blog-05.jpg" alt="IMG-BLOG">
+						<div class="p-t-32">
 
-								<div class="flex-col-c-m size-123 bg9 how-pos5">
-									<span class="ltext-107 cl2 txt-center">
-										18
-									</span>
-
-									<span class="stext-109 cl3 txt-center">
-										Jan 2018
-									</span>
-								</div>
-							</a>
-
-							<div class="p-t-32">
-								<h4 class="p-b-15">
-									<a href="blog-detail.html" class="ltext-108 cl2 hov-cl1 trans-04">
-										The Great Big List of Men’s Gifts for the Holidays
-									</a>
-								</h4>
-
-								<p class="stext-117 cl6">
-									Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eget dictum tortor. Donec
-									dictum vitae sapien eu varius
-								</p>
-
-								<div class="flex-w flex-sb-m p-t-18">
-
-									<a href="blog-detail.html" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
-										Continue Reading
-
-										<i class="fa fa-long-arrow-right m-l-9"></i>
-									</a>
-								</div>
-							</div>
-						</div>
-
-						<!-- item blog -->
-						<div class="p-b-63">
-							<a href="blog-detail.html" class="hov-img0 how-pos5-parent">
-								<img src="images/blog-06.jpg" alt="IMG-BLOG">
-
-								<div class="flex-col-c-m size-123 bg9 how-pos5">
-									<span class="ltext-107 cl2 txt-center">
-										16
-									</span>
-
-									<span class="stext-109 cl3 txt-center">
-										Jan 2018
-									</span>
-								</div>
-							</a>
-
-							<div class="p-t-32">
-								<h4 class="p-b-15">
-									<a href="blog-detail.html" class="ltext-108 cl2 hov-cl1 trans-04">
-										5 Winter-to-Spring Fashion Trends to Try Now
-									</a>
-								</h4>
-
-								<p class="stext-117 cl6">
-									Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eget dictum tortor. Donec
-									dictum vitae sapien eu varius
-								</p>
-
-								<div class="flex-w flex-sb-m p-t-18">
-
-									<a href="blog-detail.html" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
-										Continue Reading
-
-										<i class="fa fa-long-arrow-right m-l-9"></i>
-									</a>
-								</div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-
-				<div class="col-md-4 col-lg-3 p-b-80">
-					<div class="side-menu">
-
-
-						<div class="p-t-55">
-							<h4 class="mtext-112 cl2 p-b-33">
-								Reference Link
+							<h4 class="ltext-109 cl2 p-b-28">
+								Jarvis System
 							</h4>
 
-							<ul>
-								<li class="bor18">
-									<a href="https://www.facebook.com/notes/mark-zuckerberg/building-jarvis/10103347273888091/?pnref=story" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										Building Jarvis (Mark Zuckerberg)
-									</a>
-								</li>
+							<p class="stext-117 cl6 p-b-26">
+								This project was to integrate Arduino and laptop in order to build a Smart Assistant at home. I call it Jarvis in Iron man.
+								I found that there’s an Arduino-like open source firmware to help us prototype Iot products : Nodemcu. As an Iot
+								device, it is less than $2 WI-FI MCU ESP8266 integrated and easy to prototyping development kit. And I need a laptop
+								as a central management system. It uses several techniques including speech recognition, web crawler, socket, sqlite,
+								Messenger API written in Python and Nodejs.
+							</p>
 
-								<li class="bor18">
-									<a href="https://www.csie.ntu.edu.tw/~htlin/course/mltech18spring/" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										Machine Learning MOOC (Hsuan-Tien Lin)
-									</a>
-								</li>
+							<p class="stext-117 cl6 p-b-26">
+								Control light
+								<br>  Nodemcu
+								<br>  Relay
+								<br>  Screen
+								<br>  Plug-in
+								<br>
+								<br> Close the door
+								<br>  Motor 755
+								<br>  Relay
+								<br>  Power supply
+								<br>  Mechanical component
+								<br>
+								<br>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/RPv0TmH_QnU" frameborder="0" allow="autoplay; encrypted-media"
+								 allowfullscreen></iframe>
+								<br>
+								<br> Play music
+								<br>  Chrome package
+								<br>
+								<br> Ask weather & Ask news
+								<br>  Web crawler
+								<br>  crontab
+								<br>
+								<br> Custom setting
+								<br>  know every IP’s
+								<br>
+								<br>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/zlMHGYwWK4o" frameborder="0" allow="autoplay; encrypted-media"
+								 allowfullscreen></iframe>
 
-								<li class="bor18">
-									<a href="#" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										CS50
-									</a>
-								</li>
+							</p>
 
-								<li class="bor18">
-									<a href="#" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										Life Style
-									</a>
-								</li>
 
-								<li class="bor18">
-									<a href="#" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										DIY & Crafts
-									</a>
-								</li>
-							</ul>
+
 						</div>
 
 
 					</div>
 				</div>
+
+
 			</div>
 		</div>
 	</section>
 
+
+
+	<div class="container">
+
+		<h4 class="p-b-15">
+			<a class="ltext-108 cl2 hov-cl1 trans-04">
+				Photo
+			</a>
+		</h4>
+
+		<div class="row isotope-grid">
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1455.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1440.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1441.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1444.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1443.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1442.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1445.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1446.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 	<!-- Footer -->
