--- a/blog.html
+++ b/blog.html
@@ -239,7 +239,7 @@
 					<div class="p-r-45 p-r-0-lg">
 						<!-- item blog -->
 						<div class="p-b-63">
-							<a href="blog-detail.html" class="hov-img0 how-pos5-parent">
+							<a href="blog-detail1.html" class="hov-img0 how-pos5-parent">
 								<img src="blogImage/IMG_1277.jpg" alt="IMG-BLOG">
 
 								<div class="flex-col-c-m size-123 bg9 how-pos5">
