--- a/blog-detail1.html
+++ b/blog-detail1.html
@@ -251,7 +251,7 @@
 								Ask weather & news
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
-								i applied crontab to grap weather and news information every three hours. First write an web crawler program and set up cron
+								i applied crontab to grab weather and news information every three hours. First write an web crawler program and set up cron
 								job using crontab. Crontab is a time-based job scheduler in Unix-like computer operating systems. In the program,
 								I need to store data as JSON file, and everytime I call Jarvis for weather and news, Jarvis reads the corresponding
 								data and shows the information.
