--- a/blog-detail1.html
+++ b/blog-detail1.html
@@ -248,7 +248,7 @@
 
 
 							<h4 class="ltext-109 cl2 p-b-28">
-								Ask weather & news
+								Ask for weather & news
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
 								i applied crontab to grab weather and news information every three hours. First write an web crawler program and set up cron
