--- a/blog-detail1.html
+++ b/blog-detail1.html
@@ -206,14 +206,23 @@
 								<br>  Relay
 								<br>  Screen
 								<br>  Plug-in
+								<div class="wrap-pic-w how-pos5-parent">
+									<img src="blogImage/02.jpg" alt="IMG-BLOG">
+								</div>
+								<br>
 								<br>
 								<br> Close the door
 								<br>  Motor 755
 								<br>  Relay
 								<br>  Power supply
 								<br>  Nodemcu
+								<div class="wrap-pic-w how-pos5-parent">
+									<img src="blogImage/01.jpg" alt="IMG-BLOG">
+								</div>
 								<br>
 							</p>
+
+
 							<h4 class="ltext-109 cl2 p-b-28">
 								Further Application
 							</h4>
@@ -261,9 +270,14 @@
 
 							<p class="stext-117 cl6 p-b-26">
 								<a href="https://github.com/ArthurWuTW/jarvis">
-									<br> Code Here
+									Code Here
+									<br>
 								</a>
 							</p>
+
+							<h4 class="ltext-109 cl2 p-b-28">
+								Result
+							</h4>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/hZCY-c7JdFI" frameborder="0" allow="autoplay; encrypted-media"
 							 allowfullscreen></iframe>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/zlMHGYwWK4o" frameborder="0" allow="autoplay; encrypted-media"
@@ -306,7 +320,7 @@
 				<!-- Block2 -->
 				<div class="block2">
 					<div class="block2-pic hov-img0">
-						<img src="blogImage/IMG_1440.JPG" alt="IMG-PRODUCT">
+						<img src="blogImage/IMG_1489.JPG" alt="IMG-PRODUCT">
 					</div>
 
 				</div>
@@ -315,7 +329,7 @@
 				<!-- Block2 -->
 				<div class="block2">
 					<div class="block2-pic hov-img0">
-						<img src="blogImage/IMG_1441.JPG" alt="IMG-PRODUCT">
+						<img src="blogImage/IMG_1490.JPG" alt="IMG-PRODUCT">
 					</div>
 
 				</div>
