--- a/blog-detail1.html
+++ b/blog-detail1.html
@@ -193,33 +193,51 @@
 							</h4>
 
 							<p class="stext-117 cl6 p-b-26">
-								This project was to integrate Arduino and laptop in order to build a Smart Assistant at home. I call it Jarvis in Iron man.
-								There’s an Arduino-like open source firmware to help us prototype Iot products : Nodemcu. As an Iot device, it is
-								less than $2 WI-FI MCU ESP8266 integrated and easy to prototyping development kit. And I need a laptop as a central
-								management system. It uses several techniques including speech recognition, web crawler, socket, sqlite, Messenger
-								API written in Python and Nodejs.
+								This project was to integrate Arduino and laptop in order to build a Smart Assistant at home. I call it Jarvis. There’s an
+								Arduino-like open source firmware to help us prototype Iot products : Nodemcu. As an Iot device, it is less than
+								$2 WI-FI MCU ESP8266 integrated and easy to prototyping development kit. And I need a laptop as a central management
+								system. It uses several techniques including speech recognition, web crawler, socket, sqlite, Messenger API written
+								in Python and Nodejs.
 							</p>
 
+							<h4 class="ltext-109 cl2 p-b-28">
+								Light Control
+							</h4>
+
 							<p class="stext-117 cl6 p-b-26">
-								Control light
-								<br>  Nodemcu
-								<br>  Relay
-								<br>  Screen
-								<br>  Plug-in
+								Nodemcu *1
+								<br> Relay *1
+								<br> LCD *1
+								<br> Plug-in *1
 								<div class="wrap-pic-w how-pos5-parent">
 									<img src="blogImage/02.jpg" alt="IMG-BLOG">
 								</div>
 								<br>
-								<br>
-								<br> Close the door
-								<br>  Motor 755
-								<br>  Relay
-								<br>  Power supply
-								<br>  Nodemcu
+
+							</p>
+							<h4 class="ltext-109 cl2 p-b-28">
+								<br> Door Control
+							</h4>
+							<p class="stext-117 cl6 p-b-26">
+								Motor 755 *1
+								<br> Relay *1
+								<br> Power supply *1
+								<br> Nodemcu *1
 								<div class="wrap-pic-w how-pos5-parent">
 									<img src="blogImage/01.jpg" alt="IMG-BLOG">
 								</div>
 								<br>
+							</p>
+
+							<h4 class="ltext-109 cl2 p-b-28">
+								User Interfaces
+							</h4>
+							<p class="stext-117 cl6 p-b-26">
+								There're three ways to communicate with Jarvis Server : Voice, Chat server, and Facebook messenger. I applied Google Speech
+								API to realize Speech-To-Text. I also wrote a chat web in Nodejs, so it is feasible to control my room as long as
+								I can connect to my wifi network. However, Facebook Messenger is much powerful. I used "fbchat" library in Python
+								to login in Facebook and keep listening to my command, and used "forever" Nodejs package to keep the program alive
+								even when the program stops.
 							</p>
 
 
@@ -227,13 +245,13 @@
 								Further Application
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
-								When creating a new command, I need to write a new behavior code first in “behavior” directory, and then execute “AddEntryToDataBase.py”
+								Every time I create a new command, I need to write a new behavior code first in “behavior” directory, and then execute “AddEntryToDataBase.py”
 								to add the new behavior code and corresponding “command” to the database.
 
 							</p>
 
 							<h4 class="ltext-109 cl2 p-b-28">
-								Play music
+								Play Music
 							</h4>
 
 							<strong class="stext-117 cl5 p-b-26">
@@ -260,12 +278,22 @@
 								Ask for weather & news
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
-								i applied crontab to grab weather and news information every three hours. First write an web crawler program and set up cron
+								I applied crontab to grab weather and news information every three hours. First write an web crawler program and set up cron
 								job using crontab. Crontab is a time-based job scheduler in Unix-like computer operating systems. In the program,
 								I need to store data as JSON file, and everytime I call Jarvis for weather and news, Jarvis reads the corresponding
 								data and shows the information.
 								<br>
 							</p>
+
+							<h4 class="ltext-109 cl2 p-b-28">
+								Dynamic Public IP
+							</h4>
+							<p class="stext-117 cl6 p-b-26">
+
+								<br>
+							</p>
+
+
 
 
 							<p class="stext-117 cl6 p-b-26">
