--- a/blog-detail1.html
+++ b/blog-detail1.html
@@ -297,7 +297,12 @@
 							</p>
 
 
-
+							<p class="stext-117 cl6 p-b-26">
+								<a href="blog-detail2.html">
+									Jarvis Demo
+									<br>
+								</a>
+							</p>
 
 							<p class="stext-117 cl6 p-b-26">
 								<a href="https://github.com/ArthurWuTW/jarvis">
@@ -306,15 +311,7 @@
 								</a>
 							</p>
 
-							<h4 class="ltext-109 cl2 p-b-28">
-								Result
-							</h4>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/hZCY-c7JdFI" frameborder="0" allow="autoplay; encrypted-media"
-							 allowfullscreen></iframe>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/zlMHGYwWK4o" frameborder="0" allow="autoplay; encrypted-media"
-							 allowfullscreen></iframe>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/RPv0TmH_QnU" frameborder="0" allow="autoplay; encrypted-media"
-							 allowfullscreen></iframe>
+
 						</div>
 
 
@@ -328,91 +325,7 @@
 
 
 
-	<div class="container">
 
-		<h4 class="p-b-15">
-			<a class="ltext-108 cl2 hov-cl1 trans-04">
-				Photo
-			</a>
-		</h4>
-
-		<div class="row isotope-grid">
-			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-				<!-- Block2 -->
-				<div class="block2">
-					<div class="block2-pic hov-img0">
-						<img src="blogImage/IMG_1455.JPG" alt="IMG-PRODUCT">
-					</div>
-
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-				<!-- Block2 -->
-				<div class="block2">
-					<div class="block2-pic hov-img0">
-						<img src="blogImage/IMG_1489.JPG" alt="IMG-PRODUCT">
-					</div>
-
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-				<!-- Block2 -->
-				<div class="block2">
-					<div class="block2-pic hov-img0">
-						<img src="blogImage/IMG_1490.JPG" alt="IMG-PRODUCT">
-					</div>
-
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-				<!-- Block2 -->
-				<div class="block2">
-					<div class="block2-pic hov-img0">
-						<img src="blogImage/IMG_1444.JPG" alt="IMG-PRODUCT">
-					</div>
-
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-				<!-- Block2 -->
-				<div class="block2">
-					<div class="block2-pic hov-img0">
-						<img src="blogImage/IMG_1182.JPG" alt="IMG-PRODUCT">
-					</div>
-
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-				<!-- Block2 -->
-				<div class="block2">
-					<div class="block2-pic hov-img0">
-						<img src="blogImage/IMG_1442.JPG" alt="IMG-PRODUCT">
-					</div>
-
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-				<!-- Block2 -->
-				<div class="block2">
-					<div class="block2-pic hov-img0">
-						<img src="blogImage/IMG_1445.JPG" alt="IMG-PRODUCT">
-					</div>
-
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-				<!-- Block2 -->
-				<div class="block2">
-					<div class="block2-pic hov-img0">
-						<img src="blogImage/IMG_1446.JPG" alt="IMG-PRODUCT">
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
 
 
 	<!-- Footer -->
