--- a/blog-detail2.html
+++ b/blog-detail2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Blog</title>
+	<title>Jarvis Demo</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--===============================================================================================-->
@@ -39,7 +39,6 @@
 		<div class="container-menu-desktop">
 			<!-- Topbar -->
 
-
 			<div class="wrap-menu-desktop how-shadow1">
 				<nav class="limiter-menu-desktop container">
 
@@ -56,7 +55,6 @@
 							</li>
 
 							<li class="active-menu">
-
 								<a href="blog.html">Blog</a>
 							</li>
 
@@ -70,7 +68,7 @@
 						</ul>
 					</div>
 
-
+					<!-- Icon header -->
 				</nav>
 			</div>
 		</div>
@@ -105,7 +103,14 @@
 			<ul class="main-menu-m">
 				<li>
 					<a href="index.html">Home</a>
-
+					<ul class="sub-menu-m">
+						<li>
+							<a href="index.html">Homepage 1</a>
+						</li>
+					</ul>
+					<span class="arrow-main-menu-m">
+						<i class="fa fa-angle-right" aria-hidden="true"></i>
+					</span>
 				</li>
 
 				<li>
@@ -139,139 +144,159 @@
 		</div>
 	</header>
 
-	<!-- Cart -->
 
+	<!-- breadcrumb -->
+	<div class="container">
+		<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
+			<a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
+				Home
+				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+			</a>
 
+			<a href="blog.html" class="stext-109 cl8 hov-cl1 trans-04">
+				Blog
+				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+			</a>
 
-	<!-- Title page -->
-	<section class="bg-img1 txt-center p-lr-15 p-tb-92" style="background-image: url('images/bg-02.jpg');">
-
-	</section>
+			<span class="stext-109 cl4">
+				Jarvis Demo
+			</span>
+		</div>
+	</div>
 
 
 	<!-- Content page -->
-	<section class="bg0 p-t-62 p-b-60">
+	<section class="bg0 p-t-52 p-b-20">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-lg-9 p-b-80">
 					<div class="p-r-45 p-r-0-lg">
-						<!-- item blog -->
-						<div class="p-b-63">
-							<a href="blog-detail1.html" class="hov-img0 how-pos5-parent">
-								<img src="blogImage/IMG_1277.jpg" alt="IMG-BLOG">
+						<!--  -->
+						<div class="wrap-pic-w how-pos5-parent">
+							<img src="blogImage/IMG_1277.jpg" alt="IMG-BLOG">
 
-								<div class="flex-col-c-m size-123 bg9 how-pos5">
-									<span class="ltext-107 cl2 txt-center">
-										8
-									</span>
+							<div class="flex-col-c-m size-123 bg9 how-pos5">
+								<span class="ltext-107 cl2 txt-center">
+									8
+								</span>
 
-									<span class="stext-109 cl3 txt-center">
-										Oct 2018
-									</span>
-								</div>
-							</a>
-
-							<div class="p-t-32">
-								<h4 class="p-b-15">
-									<a href="blog-detail2.html" class="ltext-108 cl2 hov-cl1 trans-04">
-										Jarvis Demo
-									</a>
-								</h4>
-
-								<p class="stext-117 cl6">
-									Demo...
-								</p>
-
-								<div class="flex-w flex-sb-m p-t-18">
-
-									<a href="blog-detail2.html" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
-										Continue Reading
-
-										<i class="fa fa-long-arrow-right m-l-9"></i>
-									</a>
-								</div>
-							</div>
-						</div>
-						<!-- item blog -->
-						<div class="p-b-63">
-							<a href="blog-detail1.html" class="hov-img0 how-pos5-parent">
-								<img src="blogImage/IMG_1277.jpg" alt="IMG-BLOG">
-
-								<div class="flex-col-c-m size-123 bg9 how-pos5">
-									<span class="ltext-107 cl2 txt-center">
-										4
-									</span>
-
-									<span class="stext-109 cl3 txt-center">
-										Oct 2018
-									</span>
-								</div>
-							</a>
-
-							<div class="p-t-32">
-								<h4 class="p-b-15">
-									<a href="blog-detail1.html" class="ltext-108 cl2 hov-cl1 trans-04">
-										Jarvis System
-									</a>
-								</h4>
-
-								<p class="stext-117 cl6">
-									This project was to integrate Arduino and laptop in order to build a Smart Assistant at home...
-								</p>
-
-								<div class="flex-w flex-sb-m p-t-18">
-
-									<a href="blog-detail1.html" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
-										Continue Reading
-
-										<i class="fa fa-long-arrow-right m-l-9"></i>
-									</a>
-								</div>
+								<span class="stext-109 cl3 txt-center">
+									Oct 2018
+								</span>
 							</div>
 						</div>
 
-						<!-- item blog -->
+						<div class="p-t-32">
 
 
-						<!-- item blog -->
 
-
-					</div>
-				</div>
-
-				<div class="col-md-4 col-lg-3 p-b-80">
-					<div class="side-menu">
-
-
-						<div class="p-t-55">
-							<h4 class="mtext-112 cl2 p-b-33">
-								Reference Link
+							<h4 class="ltext-109 cl2 p-b-28">
+								Demo
 							</h4>
-
-							<ul>
-								<li class="bor18">
-									<a href="https://www.facebook.com/notes/mark-zuckerberg/building-jarvis/10103347273888091/?pnref=story" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										Building Jarvis (Mark Zuckerberg)
-									</a>
-								</li>
-
-								<li class="bor18">
-									<a href="https://www.csie.ntu.edu.tw/~htlin/course/mltech18spring/" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										Machine Learning MOOC (Hsuan-Tien Lin)
-									</a>
-								</li>
-
-
-							</ul>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/hZCY-c7JdFI" frameborder="0" allow="autoplay; encrypted-media"
+							 allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/zlMHGYwWK4o" frameborder="0" allow="autoplay; encrypted-media"
+							 allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/RPv0TmH_QnU" frameborder="0" allow="autoplay; encrypted-media"
+							 allowfullscreen></iframe>
 						</div>
 
 
 					</div>
 				</div>
+
+
 			</div>
 		</div>
 	</section>
 
+
+
+	<div class="container">
+
+		<h4 class="p-b-15">
+			<a class="ltext-108 cl2 hov-cl1 trans-04">
+				Photo
+			</a>
+		</h4>
+
+		<div class="row isotope-grid">
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1455.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1489.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1490.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1444.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1182.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1442.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1445.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1446.JPG" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 	<!-- Footer -->
