--- a/blog.html
+++ b/blog.html
@@ -158,7 +158,7 @@
 
 						<!-- item blog -->
 						<div class="p-b-63">
-							<a href="blog-detail1.html" class="hov-img0 how-pos5-parent">
+							<a href="blog-detail3.html" class="hov-img0 how-pos5-parent">
 								<img src="blogImage/006_1.jpg" alt="IMG-BLOG">
 
 								<div class="flex-col-c-m size-123 bg9 how-pos5">
@@ -174,7 +174,7 @@
 
 							<div class="p-t-32">
 								<h4 class="p-b-15">
-									<a href="blog-detail3.html" class="ltext-108 cl2 hov-cl1 trans-04">
+									<a class="ltext-108 cl2 hov-cl1 trans-04">
 										YOLO V2 Training
 									</a>
 								</h4>
@@ -208,7 +208,7 @@
 
 							<div class="p-t-32">
 								<h4 class="p-b-15">
-									<a href="blog-detail2.html" class="ltext-108 cl2 hov-cl1 trans-04">
+									<a class="ltext-108 cl2 hov-cl1 trans-04">
 										Jarvis Demo
 									</a>
 								</h4>
@@ -241,7 +241,7 @@
 
 							<div class="p-t-32">
 								<h4 class="p-b-15">
-									<a href="blog-detail1.html" class="ltext-108 cl2 hov-cl1 trans-04">
+									<a class="ltext-108 cl2 hov-cl1 trans-04">
 										Jarvis System
 									</a>
 								</h4>
