--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
 							<div class="layer-slick1 animated visible-false" data-appear="rollIn" data-delay="0">
 								<span class="ltext-101 cl2 respon2">
-									Implementation
+									Object detection - Red Blood Cell
 								</span>
 							</div>
 
