--- a/blog-detail3.html
+++ b/blog-detail3.html
@@ -208,7 +208,7 @@
 									Datasets download
 									<br>
 								</a>
-								In RBC_dataset directory, 366 local annotations(.xml) are stored in Annotations directory, and coresponding images(.jpg)
+								In RBC_dataset directory, 366 local annotations(.xml) are stored in Annotations directory, and corresponding images(.jpg)
 								are in JPECImages directory.
 
 							</p>
