--- a/about.html
+++ b/about.html
@@ -152,18 +152,24 @@
 				<div class="col-md-7 col-lg-8">
 					<div class="p-t-7 p-r-85 p-r-15-lg p-r-0-md">
 						<h3 class="mtext-111 cl2 p-b-16">
-							Arthur
+							About Arthur
 						</h3>
-
+						<h3 class="mtext-112 cl2 p-b-33">
+							Skills
+						</h3>
 						<p class="stext-113 cl6 p-b-26">
-							* Fast and Energetic self-Learner.
-							<br> * Well-prepared AFAP
-							<br> * Passionate about IoT and AI.
-							<br> * Integrate the fields of ME, CS & EE.
-							<br> * Broaden technical skills.
-							<br> * Happy to help colleagues anytime.
-							<br> * Patient TA of Numerical Methods.
-							<br>
+							* Familiar with Engineering Mathematics
+							<br> * C/C++, C#, Python, Nodejs, Matlab
+							<br> * MS Windows, UNIX, CentOS, Raspbian, Ubuntu
+							<br> * Computer vision, Machine Learning, Oject Detection
+							<br> * Web crawler, UI Design
+							<br> * Server Security, TCP/IP
+							<br> * Mechanical Design, Solidwork
+							<br> * PLC, Arduino, Nodemcu, Raspberry
+							<br> * Madarian(fluent)
+							<br> * English(advanced)
+							<br> * Japanese(intermediate)
+							<br> * Thai(intermediate)
 						</p>
 
 					</div>
@@ -194,23 +200,23 @@
 				<div class="order-md-2 col-md-7 col-lg-8 p-b-30">
 					<div class="p-t-7 p-l-85 p-l-15-lg p-l-0-md">
 						<h3 class="mtext-111 cl2 p-b-16">
-							Skills
+							Relevant Coursework
 						</h3>
 
 						<p class="stext-113 cl6 p-b-26">
-							* Familiar with Engineering Mathematics
-							<br> * C/C++, C#, Python, Nodejs, Matlab
-							<br> * MS Windows, UNIX, CentOS, Raspbian
-							<br> * Computer vision, Machine Learning, AI
-							<br> * Web crawler, UI Design
-							<br> * Server Security, TCP/IP
-							<br> * Mechanical Design, Solidwork
-							<br> * PLC, Arduino, Nodemcu, Raspberry
-							<br> * Madarian(fluent)
-							<br> * English(advanced)
-							<br> * Japanese(intermediate)
-							<br> * Thai(intermediate)
-							<br>
+							*Digital Image Processing
+							<br> *Parallel Computing
+							<br> *Probability and Statistics
+							<br> *Music Signal Retrieval
+							<br> *Discrete Event Simulation
+							<br> *Computer Programming C
+							<br> *Mechanisms and Dynamics of Machinery
+							<br> *Digital Singal Processing
+							<br> *Multimedia Analysis and Indexing(audit)
+							<br> *Machine Learning Foundations-Mathematical Foundations(Online course)
+							<br> *Machine Learning Foundations-Algorithmic Foundations(Online course)
+							<br> *Programming for Robotics - ROS(Online course)
+							<br> *Operating System(Online course)
 						</p>
 					</div>
 				</div>
