--- a/blog-detail1.html
+++ b/blog-detail1.html
@@ -172,20 +172,6 @@
 				<div class="col-md-8 col-lg-9 p-b-80">
 					<div class="p-r-45 p-r-0-lg">
 						<!--  -->
-						<div class="wrap-pic-w how-pos5-parent">
-							<img src="blogImage/IMG_1277.jpg" alt="IMG-BLOG">
-
-							<div class="flex-col-c-m size-123 bg9 how-pos5">
-								<span class="ltext-107 cl2 txt-center">
-									4
-								</span>
-
-								<span class="stext-109 cl3 txt-center">
-									Oct 2018
-								</span>
-							</div>
-						</div>
-
 						<div class="p-t-32">
 
 							<h4 class="ltext-109 cl2 p-b-28">
@@ -200,8 +186,8 @@
 								in Python and Nodejs.
 							</p>
 
-							<h4 class="ltext-109 cl2 p-b-28">
-								Light Control
+							<h4 class="mtext-112 cl2 p-b-33">
+								1.Light Control
 							</h4>
 
 							<p class="stext-117 cl6 p-b-26">
@@ -215,8 +201,8 @@
 								<br>
 
 							</p>
-							<h4 class="ltext-109 cl2 p-b-28">
-								<br> Door Control
+							<h4 class="mtext-112 cl2 p-b-33">
+								<br> 2.Door Control
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
 								Motor 755 *1
@@ -229,8 +215,9 @@
 								<br>
 							</p>
 
-							<h4 class="ltext-109 cl2 p-b-28">
-								User Interfaces
+
+							<h4 class="mtext-112 cl2 p-b-33">
+								3.User Interfaces
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
 								There're three ways to communicate with Jarvis Server : Voice, Chat server, and Facebook messenger. I applied Google Speech
@@ -241,8 +228,8 @@
 							</p>
 
 
-							<h4 class="ltext-109 cl2 p-b-28">
-								Further Application
+							<h4 class="mtext-112 cl2 p-b-33">
+								4. Add new command
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
 								Every time I create a new command, I need to write a new behavior code first in “behavior” directory, and then execute “AddEntryToDataBase.py”
@@ -250,32 +237,18 @@
 
 							</p>
 
-							<h4 class="ltext-109 cl2 p-b-28">
-								Play Music
+							<h4 class="mtext-112 cl2 p-b-33">
+								5.Play Music
 							</h4>
-
-							<strong class="stext-117 cl5 p-b-26">
-								import webbrowser
-								<br> webbrowser.open('https://youtu.be/mO_ztLY2U6c?t=9s', new=2)
-							</strong>
 							<p class="stext-117 cl6 p-b-26">
-								Use webbrower library to pop up a new windows
+								U...
 								<br>
 							</p>
 
-							<strong class="stext-117 cl5 p-b-26">
-								import os
-								<br> os.system("pkill "+"chrome")
-
-							</strong>
-
-							<p class="stext-117 cl6 p-b-26">
-								Use os library to kill the window
-							</p>
 
 
-							<h4 class="ltext-109 cl2 p-b-28">
-								Ask for weather & news
+							<h4 class="mtext-112 cl2 p-b-33">
+								6.Ask for weather & news
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
 								I applied crontab to grab weather and news information every three hours. First write an web crawler program and set up cron
@@ -285,8 +258,8 @@
 								<br>
 							</p>
 
-							<h4 class="ltext-109 cl2 p-b-28">
-								Ask for Dynamic Public IP
+							<h4 class="mtext-112 cl2 p-b-33">
+								7.Ask for Dynamic Public IP
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
 								In my laptop, I've activated ssh and sftp server for server management. However, because of dynamic public IP address, I
@@ -297,14 +270,14 @@
 							</p>
 
 
-							<p class="stext-117 cl6 p-b-26">
+							<p class="mtext-112 cl2 p-b-33">
 								<a href="blog-detail2.html">
 									Jarvis Demo
 									<br>
 								</a>
 							</p>
 
-							<p class="stext-117 cl6 p-b-26">
+							<p class="mtext-112 cl2 p-b-33">
 								<a href="https://github.com/ArthurWuTW/jarvis">
 									Code Here
 									<br>
@@ -317,10 +290,31 @@
 
 					</div>
 				</div>
+				<div class="col-md-4 col-lg-3 p-b-80">
+					<div class="side-menu">
 
 
+						<div class="p-t-55">
+							<h4 class="mtext-112 cl2 p-b-33">
+								Reference Link
+							</h4>
+
+							<ul>
+								<li class="bor18">
+									<a href="https://www.facebook.com/notes/mark-zuckerberg/building-jarvis/10103347273888091/?pnref=story" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
+										Building Jarvis (Mark Zuckerberg)
+									</a>
+								</li>
+
+
+							</ul>
+						</div>
+
+
+					</div>
+
+				</div>
 			</div>
-		</div>
 	</section>
 
 
