--- a/blog-detail3.html
+++ b/blog-detail3.html
@@ -172,32 +172,19 @@
 				<div class="col-md-8 col-lg-9 p-b-80">
 					<div class="p-r-45 p-r-0-lg">
 						<!--  -->
-						<div class="wrap-pic-w how-pos5-parent">
-							<img src="blogImage/006_1.jpg" alt="IMG-BLOG">
-
-							<div class="flex-col-c-m size-123 bg9 how-pos5">
-								<span class="ltext-107 cl2 txt-center">
-									20
-								</span>
-
-								<span class="stext-109 cl3 txt-center">
-									Oct 2018
-								</span>
-							</div>
-						</div>
-
 						<div class="p-t-32">
 
 							<h4 class="ltext-109 cl2 p-b-28">
-								YOLO V2 Training
+								Week Project-YOLO V2 Training
 							</h4>
 
 							<p class="stext-117 cl6 p-b-26">
-								This is a starter implementation of YOLOv2 model for object classification and detection using a pretrained weight. My Goal
-								is to explain how YOLO algorithm works.
+								This is a starter implementation of YOLOv2 model for object classification(1 class) and detection using a pretrained weight.
+								My Goal is to detection the Red Blood Cell(RBC) which often involves identifying and characterizing patient blood
+								samples.
 							</p>
 
-							<h4 class="ltext-109 cl2 p-b-28">
+							<h4 class="mtext-112 cl2 p-b-33">
 								Red Blood Cell datasets
 							</h4>
 
@@ -208,12 +195,12 @@
 									Datasets download
 									<br>
 								</a>
-								In RBC_dataset directory, 366 local annotations(.xml) are stored in Annotations directory, and corresponding images(.jpg)
-								are in JPECImages directory.
-
+								In RBC_dataset directory, 366 annotations(.xml) are in Annotations directory, and corresponding images(.jpg) in JPECImages
+								directory. XML files include labelled data in the context of object detection with corresponding bounding box coordinates
+								and labels.
 							</p>
 
-							<h4 class="ltext-109 cl2 p-b-28">
+							<h4 class="mtext-112 cl2 p-b-33">
 								Environment
 							</h4>
 
@@ -227,13 +214,13 @@
 									<img src="blogImage/007.jpg" alt="IMG-BLOG">
 								</div>
 							</p>
-							<h4 class="ltext-109 cl2 p-b-28">
+							<h4 class="mtext-112 cl2 p-b-33">
 								<br> parse_annotation
 							</h4>
 
 							<p class="stext-117 cl6 p-b-26">
 								In preprocessing.py, parse_annotation function is to transfer all xmls into a list, and then output 'all_imgs' and 'seen_labels'
-								to count objects in all classes.
+								to count objects in all classes. parse_annotation transfers the format like :
 								<br>
 								<div class="wrap-pic-w how-pos5-parent">
 									<img src="blogImage/001.jpg" alt="IMG-BLOG">
@@ -241,7 +228,7 @@
 							</p>
 
 
-							<h4 class="ltext-109 cl2 p-b-28">
+							<h4 class="mtext-112 cl2 p-b-33">
 								<br> BatchGenerator
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
@@ -258,7 +245,7 @@
 							</p>
 
 							</p>
-							<h4 class="ltext-109 cl2 p-b-28">
+							<h4 class="mtext-112 cl2 p-b-33">
 								<br>Training Work Flow
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
@@ -270,10 +257,13 @@
 								<br>
 							</p>
 							</p>
-							<h4 class="ltext-109 cl2 p-b-28">
+							<h4 class="mtext-112 cl2 p-b-33">
 								<br> Tensor Board
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
+
+								There are total 18 epochs and it stoped because we applied 'EarlyStopping' callback function during my training process.
+								'EarlyStopping' stops training when the validation data set grows several times.
 
 								<div class="wrap-pic-w how-pos5-parent">
 									<img src="blogImage/004.jpg" alt="IMG-BLOG">
@@ -282,18 +272,20 @@
 							</p>
 
 							</p>
-							<h4 class="ltext-109 cl2 p-b-28">
+							<h4 class="mtext-112 cl2 p-b-33">
 								<br> Testing Work Flow
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
-
+								In testing, we fed an (RGB) images as an imput, and obtained a multi-dimensional array(1*13*13*5*6). It contains 13*13 grids,
+								each grid has 5 box candidates, and each box have 6 values (x,y,w,h,p,class). Then, we filtered and removed the box
+								with low probability(5th element p). In the end, draw the bounding boxes to show the object.
 								<div class="wrap-pic-w how-pos5-parent">
 									<img src="blogImage/005.jpg" alt="IMG-BLOG">
 								</div>
 								<br>
 							</p>
 							</p>
-							<h4 class="ltext-109 cl2 p-b-28">
+							<h4 class="mtext-112 cl2 p-b-33">
 								<br> Test
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
@@ -303,14 +295,14 @@
 								</div>
 								<br>
 							</p>
-							<h4 class="ltext-109 cl2 p-b-28">
+							<h4 class="mtext-112 cl2 p-b-33">
 								CODE
 							</h4>
 
 
 
 
-							<p class="stext-117 cl6 p-b-26">
+							<p class="mtext-112 cl2 p-b-33">
 								<a href="https://github.com/ArthurWuTW/yolov2">
 									Code Here
 									<br>
@@ -336,16 +328,20 @@
 							<ul>
 								<li class="bor18">
 									<a href="https://github.com/experiencor/keras-yolo2" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										experiencor/keras-yolo2
+										[1]experiencor/keras-yolo2
 									</a>
 								</li>
 
 								<li class="bor18">
 									<a href="https://github.com/mjDelta/yolo2-keras" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										mjDelta/yolo2-keras
+										[2]mjDelta/yolo2-keras
 									</a>
 								</li>
-
+								<li class="bor18">
+									<a href="https://www.kaggle.com/paultimothymooney/blood-cells/home" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
+										[3]Blood cell images-Kaggle
+									</a>
+								</li>
 
 							</ul>
 						</div>
