--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
 							<br> *Discrete Event Simulation
 							<br> *Computer Programming C
 							<br> *Mechanisms and Dynamics of Machinery
-							<br> *Digital Singal Processing
+							<br> *Digital Signal Processing
 							<br> *Multimedia Analysis and Indexing(audit)
 							<br> *Machine Learning Foundations-Mathematical Foundations(Online course)
 							<br> *Machine Learning Foundations-Algorithmic Foundations(Online course)
