--- a/blog-detail1.html
+++ b/blog-detail1.html
@@ -241,7 +241,9 @@
 								5.Play Music
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
-								U...
+								There are different ways to play music like spotify or itunes. I prefered listening to music on Youtube, so I implemented
+								the control of music using os module in python to open a youtube URL in firefox browser and if I want to turn off
+								the music, just kill the browser.
 								<br>
 							</p>
 
