--- a/blog-detail3.html
+++ b/blog-detail3.html
@@ -180,8 +180,7 @@
 
 							<p class="stext-117 cl6 p-b-26">
 								This is a starter implementation of YOLOv2 model for object classification(1 class) and detection using a pretrained weight.
-								My Goal is to detection the Red Blood Cell(RBC) which often involves identifying and characterizing patient blood
-								samples.
+								My Goal is to detect the Red Blood Cell(RBC) which often involves identifying and characterizing patient blood samples.
 							</p>
 
 							<h4 class="mtext-112 cl2 p-b-33">
