--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
 							* Familiar with Engineering Mathematics
 							<br> * C/C++, C#, Python, Nodejs, Matlab
 							<br> * MS Windows, UNIX, CentOS, Raspbian, Ubuntu
-							<br> * Computer vision, Machine Learning, Oject Detection
+							<br> * Computer vision, Machine Learning, Object Detection
 							<br> * Web crawler, UI Design
 							<br> * Server Security, TCP/IP
 							<br> * Mechanical Design, Solidwork
