--- a/blog.html
+++ b/blog.html
@@ -175,7 +175,7 @@
 							<div class="p-t-32">
 								<h4 class="p-b-15">
 									<a class="ltext-108 cl2 hov-cl1 trans-04">
-										YOLO V2 Multiclass Training and Testing
+										YOLO V2 Testing & PR curve
 									</a>
 								</h4>
 
