--- a/blog-detail3.html
+++ b/blog-detail3.html
@@ -261,7 +261,7 @@
 							</h4>
 							<p class="stext-117 cl6 p-b-26">
 
-								There are total 18 epochs and it stoped because we applied 'EarlyStopping' callback function during my training process.
+								There are total 18 epochs and it stopped because we applied 'EarlyStopping' callback function during my training process.
 								'EarlyStopping' stops training when the validation data set grows several times.
 
 								<div class="wrap-pic-w how-pos5-parent">
