--- a/blog.html
+++ b/blog.html
@@ -158,7 +158,7 @@
 
 						<!-- item blog -->
 						<div class="p-b-63">
-							<a href="blog-detail4.html" class="hov-img0 how-pos5-parent">
+							<a class="hov-img0 how-pos5-parent">
 								<img src="blogImage/0002.jpg" alt="IMG-BLOG">
 
 								<div class="flex-col-c-m size-123 bg9 how-pos5">
@@ -192,7 +192,7 @@
 
 						<!-- item blog -->
 						<div class="p-b-63">
-							<a href="blog-detail3.html" class="hov-img0 how-pos5-parent">
+							<a class="hov-img0 how-pos5-parent">
 								<img src="blogImage/006_1.jpg" alt="IMG-BLOG">
 
 								<div class="flex-col-c-m size-123 bg9 how-pos5">
@@ -226,7 +226,7 @@
 
 						<!-- item blog -->
 						<div class="p-b-63">
-							<a href="blog-detail2.html" class="hov-img0 how-pos5-parent">
+							<a class="hov-img0 how-pos5-parent">
 								<img src="blogImage/IMG_1277.jpg" alt="IMG-BLOG">
 
 								<div class="flex-col-c-m size-123 bg9 how-pos5">
@@ -259,7 +259,7 @@
 						</div>
 						<!-- item blog -->
 						<div class="p-b-63">
-							<a href="blog-detail1.html" class="hov-img0 how-pos5-parent">
+							<a class="hov-img0 how-pos5-parent">
 								<img src="blogImage/IMG_1277.jpg" alt="IMG-BLOG">
 
 								<div class="flex-col-c-m size-123 bg9 how-pos5">
