--- a/contact.html
+++ b/contact.html
@@ -290,6 +290,26 @@
 							</p>
 						</div>
 					</div>
+					<br>
+					<div class="flex-w w-full">
+						<span class="fs-18 cl5 txt-center size-211">
+							<span class="lnr lnr-envelope"></span>
+						</span>
+
+						<div class="size-212 p-t-2">
+							<span class="mtext-110 cl2">
+								Linkedin
+							</span>
+
+							<p>
+
+								<a class="stext-115 cl6 size-213 p-t-18" href="https://www.linkedin.com/in/wu-kuan-lung-arthur-839652172/">
+									Arthur Wu
+								</a>
+
+							</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
